package.json 파일 수정: main 경로 변경 및 start 스크립트 추가, 모듈 타입 설정

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "team0_toy-project-0",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "/src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/app.js"
   },
   "repository": {
     "type": "git",
@@ -11,6 +12,7 @@
   },
   "keywords": [],
   "author": "",
+  "type": "module",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/kongukjae/TEAM0_toy-project-0/issues"
