--- a/package.json
+++ b/package.json
@@ -18,8 +18,5 @@
     "url": "https://github.com/kongukjae/TEAM0_toy-project-0/issues"
   },
   "homepage": "https://github.com/kongukjae/TEAM0_toy-project-0#readme",
-  "description": "",
-  "dependencies": {
-    "express": "^4.21.2"
-  }
+  "description": ""
 }
